fix content-wrap and nav responsive widths

--- a/app/assets/stylesheets/globals.css.scss
+++ b/app/assets/stylesheets/globals.css.scss
@@ -1,35 +1,3 @@
-@media only screen and (min-width: 300px) {
-
-	#content-wrap {
-		width: 18.75em;
-	}
-
-}
-
-@media only screen and (min-width: 480px) {
-
-	#content-wrap {
-		width: 30em;
-	}
-
-}
-
-@media only screen and (min-width: 768px) {
-
-	#content-wrap {
-		width: 48em;
-	}
-
-}
-
-@media only screen and (min-width: 1024px) {
-
-	#content-wrap {
-		width: 64em;
-	}
-
-}
-
 html {
 	font-size: 100%;
 }
@@ -39,31 +7,112 @@ body {
 	font-family: georgia, serif;
 	text-align: center;
 	color: #272727;
-	padding: 0;
-	margin: 0;
+	padding: 0px;
+	margin: 0px;
 	background-color: #000;
+	width: 100%;
+}
+
+.content-wrap {
+	margin: 0 10%;
 }
 
 nav {
 
-	position: fixed;
-	top: 0px;
-	right: 0px;
-	text-align: right;
+	top: 0;
+	width: 100%;
+	display: inline-block;
 
 	.logo {
-		display: inline-block;
-	}
+		float: left;
 
-	li {
-		display: inline-block;
-			margin-left: 1.5625em;
-
-		a {
-			text-decoration: none;
-			color: #fff;
-			text-transform: uppercase;
+		img {
+			width: 60%;
 		}
 	}
+
+	ul {
+		display: none;
+	}
+
+	.menu {
+		display: block;
+		margin-top: 40px;
+		text-decoration: none;
+		color: #fff;
+		text-transform: uppercase;
+	}
+
+}
+
+/* Phones - Portrait & Landscape */
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+
+
+}
+
+/* Tablets - Portrait & Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1023px) {
+
+}
+
+/* Really Small Laptops */
+@media only screen and (min-width: 768px) {
+
+	nav {
+
+		.logo {
+
+			img {
+				width: 75%;
+			}
+		}
+
+		ul {
+			display: block;
+			text-align: right;
+			padding-top: 25px;
+		}
+
+		li {
+			display: inline-block;
+			margin-left: 1.5625em;
+
+			a {
+				text-decoration: none;
+				color: #fff;
+				text-transform: uppercase;
+			}
+		}
+		.menu {
+			display: none;
+		}
+	}
+
+}
+
+/* Small Laptops */
+@media only screen and (min-width: 1024px) {
+
+	nav {
+
+		.logo {
+			img {
+				width: 100%;
+			}
+		}
+	}
+
+}
+
+/* Desktops & Laptops */
+@media only screen and (min-width: 1224px) {
+
+
+}
+
+/* Large screens */
+@media only screen and (min-width: 1824px) {
+
 
 }
